--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "firebase": "^12.6.0",
+    "gsap": "^3.13.0",
     "lucide-react": "^0.553.0",
+    "motion": "^12.23.24",
     "next": "16.0.3",
     "react": "19.2.0",
     "react-dom": "19.2.0",
